[package]
name = "mysqldump-filter"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
color-eyre = "0.6.3"
config = "0.15.11"
fastbloom = "0.9.0"
lazy_static = "1.5.0"
nom = "8.0.0"
regex = "1.11.1"
tempdir = "0.3.7"
tempfile = "3.19.0"
