[package]
name = "mysqldump-filter"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "filter"
path = "src/main.rs"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false

[dependencies]
anyhow = "1.0.98"
cel-interpreter = "0.9.0"
chrono = "0.4.41"
clap = { version = "4.5.32", features = ["derive"] }
config = "0.15.11"
derive_more = { version = "2.0.1", features = ["full"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
nom = "8.0.0"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
sqlparser = "0.55.0"
tempdir = "0.3.7"
thiserror = "2.0.12"
